fix(contact) : contrast

--- a/assets/base/_reset-typography.scss
+++ b/assets/base/_reset-typography.scss
@@ -38,6 +38,9 @@ p{
         @include text($text-color,$secondary-font,0.75rem);
     }
 }
+.contrast{
+    background-color : $background-transparent-dark;
+}
 /**
 **************** Mobile **************************
 **/
