--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,6 +93,10 @@ p {
   text-transform: none;
 }
 
+.contrast {
+  background-color: rgba(72, 56, 49, 0.2);
+}
+
 /**
 **************** Mobile **************************
 **/
